--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="img/bla.jpg" alt=""></td>
+                <td><img src="bla.jpg" alt=""></td>
                 <td> 
                     <h1>Leonardo Larios</h1>
                     <p>Estudiante de secundaria de un <a href="https://ctpcit.co.cr/"><strong>colegio técnico</strong>.</a></p>
