--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <td>⭐⭐⭐⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>Playing</td>
+                        <td>Playing Games</td>
                         <td>⭐⭐⭐⭐⭐</td>
                     </tr>
                     <tr>
